--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       box-shadow: 0 6px 32px rgba(0,0,0,0.6);
     }
     .avatar {
-      width: 150px;
-      height: 150px;
+      width: 300px;
+      height: 250px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 1em;
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?auto=format&fit=facearea&w=400&h=400" alt="Cyborg Avatar" class="avatar">
+    <img src="herobrine.jpg" alt="Cyborg Avatar" class="avatar">
     <h1>Cyborg</h1>
     <div class="options">
       <a href="#" class="option-link">PLD</a>
