--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <img src="herobrine.jpg" alt="Cyborg Avatar" class="avatar">
     <h1>Cyborg</h1>
     <div class="options">
-      <a href="#" class="option-link">PLD</a>
-      <a href="#" class="option-link">Minecraft</a>
-      <a href="#" class="option-link">Maps</a>
+      <a href="learn.html" class="option-link">PLD.learn</a>
+      <a href="write.html" class="option-link">PLD.write</a>
+      <a href="buy.html" class="option-link">PLD.buy</a>
     </div>
   </div>
 </body>
