--- a/learn.html
+++ b/learn.html
@@ -101,11 +101,11 @@
   <h1>PLD Learn Gallery</h1>
   <div class="gallery-scroll" id="gallery">
     <!-- Change the src to your own images or add more! -->
-    <img src="cover1.jpg" alt="1">
-    <img src="toc.jpg" alt="2">
-    <img src="s.jpg" alt="3">
-    <img src="a.jpg" alt="4">
-    <img src="t.jpg" alt="5">
+    <img src="cover1.JPG" alt="1">
+    <img src="toc.JPG" alt="2">
+    <img src="s.JPG" alt="3">
+    <img src="a.JPG" alt="4">
+    <img src="t.JPG" alt="5">
     <!-- Add or remove images as needed -->
   </div>
 
