--- a/learn.html
+++ b/learn.html
@@ -106,6 +106,11 @@
     <img src="s.JPG" alt="3">
     <img src="a.JPG" alt="4">
     <img src="t.JPG" alt="5">
+    <img src="p.JPG" alt="6">
+    <img src="i.JPG" alt="7">
+    <img src="n.JPG" alt="8">
+    <img src="m.png" alt="9">
+    <img src="r.png" alt="10">
     <!-- Add or remove images as needed -->
   </div>
 
