--- a/learn.html
+++ b/learn.html
@@ -111,6 +111,16 @@
     <img src="n.JPG" alt="8">
     <img src="m.png" alt="9">
     <img src="r.png" alt="10">
+    <img src="h.JPG" alt="11">
+    <img src="e.JPG" alt="12">
+    <img src="c.JPG" alt="13">
+    <img src="d.JPG" alt="14">
+    <img src="f.JPG" alt="15">
+    <img src="l.JPG" alt="16">
+    <img src="g.JPG" alt="17">
+    <img src="o.JPG" alt="18">
+    <img src="u.png" alt="19">
+    <img src="b.png" alt="20">
     <!-- Add or remove images as needed -->
   </div>
 
