--- a/learn.html
+++ b/learn.html
@@ -119,8 +119,8 @@
     <img src="l.JPG" alt="16">
     <img src="g.JPG" alt="17">
     <img src="o.JPG" alt="18">
-    <img src="u.png" alt="19">
-    <img src="b.png" alt="20">
+    <img src="u.JPG" alt="19">
+    <img src="b.JPG" alt="20">
     <!-- Add or remove images as needed -->
   </div>
 
