--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h1>Cyborg</h1>
     <div class="options">
       <a href="learn.html" class="option-link">PLD.learn</a>
-      <a href="write.html" class="option-link">PLD.write</a>
+      <a href="write.html" class="option-link">PLD.quiz</a>
       <a href="buy.html" class="option-link">PLD.buy</a>
     </div>
   </div>
